network/9/cilium/policy-1.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cilium-policy-9-1"
  namespace: np-9
spec:
  endpointSelector: {}
  egress:
  - {}
  ingress:
  - {}
