network/9/cilium/policy-3.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cilium-policy-9-3"
  namespace: np-9
spec:
  endpointSelector:
    matchLabels:
      app: db
  egress:
  - {}

  ingress:
  - fromEndpoints:
    - matchLabels:
        app: api
    toPorts:
    - ports:
      - port: "5432"
        protocol: ANY
