network/9/cilium/policy-4.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cilium-policy-9-4"
  namespace: np-9
spec:
  endpointSelector:
    matchLabels:
      app: web
  egress:
    - toEndpoints:
      - matchLabels:
          app: api
      toPorts:
        - ports:
          - port: "80"
            protocol: ANY
    - toPorts:
      - ports:
        - port: "53"
          protocol: ANY
